--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ span {
 
 /*-- Header --*/
 #header {
-  background: #;
+  background-image: url(img/c0f4e6ff-82a4-45d8-a3d5-8996247af5d0.jpg);
   position: fixed;
   left: 0;
   top: 0;
@@ -143,13 +143,12 @@ span {
   padding: 6px 0 0 0;
 }
 
-#header #logo h1 {
-  color: #f68122;
+#header #logo {
   font-family: "Philosopher", sans-serif;
-  font-size: 26px;
-  font-weight: 500;
-  letter-spacing: 2px;
-  margin: 0;
+  height: 26px;
+  width: fit-content, 500px;
+  padding: 2px;
+  margin 0;
 }
 
 #header #logo h1 a {
@@ -173,9 +172,7 @@ span {
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
 }
 
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
+/*--- Hero Section ---*/
 #hero {
   width: 100%;
   height: calc(100vh - 40px);
@@ -513,14 +510,13 @@ body.mobile-nav-active #mobile-nav {
 }
 
 body.mobile-nav-active #mobile-nav-toggle i {
-  color: #fff;
+  color: #f68126;
 }
 
-/*Sections
+/*Sections */
 .padd-section {
   padding-bottom: 80px;
-  padding-top: -200px;
-}*/
+}
 
 @media (max-width: 992px) {
   .padd-section {
