--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ span {
   transition: all 0.5s ease;
 }
 
-#header #logo {
+/*#header #logo {
   padding: 6px 0 0 0;
 }
 
@@ -158,7 +158,7 @@ span {
 #header #logo a img {
   padding: 0;
   margin: 0;
-}
+}*/
 
 .scroll-header {
   background: #fff;
