--- a/css/style.css
+++ b/css/style.css
@@ -138,17 +138,19 @@ span {
   transition: all 0.5s ease;
 }
 
-#container #logo {
-  width:922px;
+#header #logo img {
   margin:0 auto;
   text-align:left;
   position:relative;
  }
 
-#logo {
+#logo img a{
   position:absolute;
   top:0;
   left:-10px;
+  width: 10px;
+  height: 30px;
+  z-index: 99;
 }
 
 .scroll-header {
