--- a/css/style.css
+++ b/css/style.css
@@ -138,16 +138,23 @@ span {
   transition: all 0.5s ease;
 }
 
-#logo img a{
+
+.logo {
   position:absolute;
   top:0;
-  left:-10px;
-  width: 10px;
-  height: 30px;
-  z-index: 99;
+ leftt:-10px;
 }
 
-.scroll-header {
+.logo img {
+  width: 200px;
+  height: 100px;
+  margin-top: 10px;
+  margin-left: 20px;
+  float:left;
+  margin-top:16px;
+  cursor: pointer;
+}
+.scroll-headerll-header {
   background: #fff;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
 }
