--- a/css/style.css
+++ b/css/style.css
@@ -141,15 +141,14 @@ span {
 
 .logo {
   position:absolute;
-  top:0;
- leftt:-10px;
+  top: 4px;
 }
 
 .logo img {
   width: 200px;
-  height: 250px;
+  height: 500px;
   margin-top: 10px;
-  margin-left: 20px;
+  margin-left: 12px;
   float:left;
   cursor: pointer;
 }
