--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ span {
   margin: 0;
   padding: 10px;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  background: #1b1476d8;
+  background: #f8f7fad8;
 }
 
 .nav-menu ul li {
@@ -373,7 +373,7 @@ span {
 
 .nav-menu ul li a {
   padding: 5px 10px;
-  color: #333;
+  color: #f9f6f6;
   transition: 0.3s;
   display: block;
   font-size: 14px;
