--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ span {
   color: #fff;
 }
 
-/*-- Header --*/
+/* Header */
 #header {
   position: fixed;
   left: 0;
@@ -134,30 +134,12 @@ span {
   transition: all 0.5s ease;
 }
 
-.logo {
-  position: absolute;
-  Left: 4px;
-  z-index: 4;
-  height: 400px;
-  width: 380px;
-  padding-left: 6px;
-}
-
-.logo img {
-  width: 500px;
-  height: 500px;
-  margin-right: 4px;
-  margin-left: 6px;
-  float:left;
-  cursor: pointer;
-}
-
 .scroll-headerll-header {
   background: #fff;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
 }
 
-/*--- Hero Section ---*/
+/* Hero Section */
 #hero {
   width: 100%;
   height: calc(100vh - 40px);
@@ -498,7 +480,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
   color: #f68126;
 }
 
-/*Sections */
+/* Sections */
 
 @media (max-width: 992px) {
 .section-title {
@@ -536,7 +518,6 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 /* Get Started Section  */
 #get-started {
-	margin-top: -1000px;
   display: inline-block;
   height: 100%;
   width: 100%;
@@ -584,8 +565,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 /* end get started section */
 
 
-/* Screenshots Section
---------------------------------*/
+/* Screenshots Section */
 .owl-dot.active > span {
   height: 10px !important;
   width: 10px !important;
@@ -736,7 +716,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
   }
 }
 
-@-webkit-keyframes pulsate2 {
+@keyframes pulsate2 {
   0% {
     -webkit-transform: scale(0.1, 0.1);
     transform: scale(0.1, 0.1);
@@ -749,8 +729,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
   }
 }
 
-/* Team Section
---------------------------------*/
+/* Team Section */
 #team .team-block {
   box-shadow: 0 0 35px rgba(50, 13, 13, 0.1);
   height: 254px;
@@ -818,11 +797,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
   transition: all 0.5s ease-in-out 0s;
 }
 
-
-
-*/
-/* Testimonials Section
---------------------------------*/
+/* Testimonials Section */
 
  #testimonials .testimonials-content {
   box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
@@ -897,9 +872,8 @@ body.mobile-nav-active #mobile-nav-toggle i {
   margin: 0;
 }
 
-
-/* Blog Section
---------------------------------*/
+ 
+/* Blog Section */
 @media (max-width: 991px) {
   #blog .block-blog {
     margin-bottom: 30px;
@@ -956,8 +930,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
   color: #f68122;
 }*/
 
-/* Newsletter Section
---------------------------------*/
+/* Newsletter Section */
 #newsletter {
   background: transparent url(../img/newsletter-bg.jpg) no-repeat center top fixed;
   background-size: cover;
@@ -1045,7 +1018,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 }*/
 
 
-/*-------------img section----------------*/
+/* img section */
 
 /*
 
@@ -1057,7 +1030,7 @@ Flexbox is used as a fallback so that browsers which don't support grid will sti
 
 */
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:500);
+/* @import url(https://fonts.googleapis.com/css?family=Montserrat:500); */
 
 :root {
   /* Base font size */
@@ -1144,12 +1117,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
   }
 }
 
-
-/*---------------end img section---------------*/
-
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+/* end img section */                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        # Fo                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          --------------------------------------------------------------*/
 .footer {
   background: #007499;
   background-size: cover;
@@ -1179,7 +1147,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
   color: #fff;
   padding-bottom: 20px;
 }
-*/
+
 .footer .list-menu ul li a {
   color: #fff;
   font-size: 12px;
