--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
   line-height: 1.5;
   color: #686A6F;
   text-align: left;
-  background-color: #fff;
+  background-color: #23058f9f;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
