--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,7 @@ span {
   line-height: 56px;
   font-family: "Philosopher", sans-serif;
   color: #f68122;
+  z-index: 99;
 }
 
 @media (max-width: 768px) {
