--- a/education-consultancy-technically-new-clone/css/style.css
+++ b/education-consultancy-technically-new-clone/css/style.css
@@ -130,7 +130,6 @@ span {
 
 /*--------------------------------------------------------------
 # Header
---------------------------------------------------------------*/
 #header {
   background: #fff;
   position: fixed;
@@ -178,7 +177,7 @@ span {
 
 /*--------------------------------------------------------------
 # Hero Section
---------------------------------------------------------------*/
+------------------------------------------------------------- 
 #hero {
   width: 100%;
   height: calc(100vh - 40px);
@@ -288,8 +287,8 @@ span {
 
 /*--------------------------------------------------------------
 # Navigation Menu
---------------------------------------------------------------*/
-/* Nav Menu Essentials */
+--------------------------------------------------------------
+/* Nav Menu Essentials 
 .nav-menu, .nav-menu * {
   margin: 0;
   padding: 0;
@@ -327,7 +326,7 @@ span {
   min-width: 180px;
 }
 
-/* Nav Menu Arrows */
+/* Nav Menu Arrows 
 .sf-arrows .sf-with-ul {
   padding-right: 22px;
 }
@@ -346,7 +345,7 @@ span {
   content: "\f105";
 }
 
-/* Nav Meu Container */
+/* Nav Meu Container 
 #nav-menu-container {
   float: right;
   margin: 0 0 0 0;
@@ -358,7 +357,7 @@ span {
   }
 }
 
-/* Nav Meu Styling */
+/* Nav Meu Styling 
 .nav-menu a {
   padding: 8px 8px;
   text-decoration: none;
@@ -408,7 +407,7 @@ span {
   margin: 0;
 }
 
-/* Mobile Nav Toggle */
+/* Mobile Nav Toggle 
 #mobile-nav-toggle {
   position: fixed;
   right: 0;
@@ -435,7 +434,7 @@ span {
   }
 }
 
-/* Mobile Nav Styling */
+/* Mobile Nav Styling 
 #mobile-nav {
   position: fixed;
   top: 0;
@@ -508,7 +507,7 @@ span {
   display: none;
 }
 
-/* Mobile Nav body classes */
+/* Mobile Nav body classes 
 body.mobile-nav-active {
   overflow: hidden;
 }
@@ -524,6 +523,219 @@ body.mobile-nav-active #mobile-nav-toggle i {
 /*--------------------------------------------------------------
 # Sections
 --------------------------------------------------------------*/
+
+.header .btn { display: none; }
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-block: 20px;
+  box-shadow: var(--shadow-1);
+  z-index: 4;
+}
+
+.header.active {
+  background-color: var(--white);
+  position: fixed;
+  animation: slideIn 0.5s ease forwards;
+}
+
+@keyframes slideIn {
+  0% { transform: translateY(-100%); }
+  100% { transform: translateY(0); }
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+
+.header.active .logo-light,
+.header .logo-dark { display: none; }
+
+.header .logo-light,
+.header.active .logo-dark { display: block; }
+
+.nav-open-btn {
+  font-size: 3.5rem;
+  color: var(--white);
+}
+
+.header.active .nav-open-btn { color: var(--charcoal); }
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: -300px;
+  background-color: var(--raisin-black);
+  color: var(--white);
+  max-width: 300px;
+  width: 100%;
+  height: 100vh;
+  padding: 30px;
+  padding-block-end: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  z-index: 2;
+  visibility: hidden;
+  transition: var(--transition-3);
+}
+
+.navbar.active {
+  visibility: visible;
+  transform: translateX(300px);
+}
+
+.navbar-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-close-btn {
+  background-color: var(--white_a8);
+  color: var(--white);
+  font-size: 2rem;
+  padding: 6px;
+  border-radius: var(--radius-circle);
+  transition: var(--transition-1);
+}
+
+.nav-close-btn ion-icon { --ionicon-stroke-width: 50px; }
+
+.nav-close-btn:is(:hover, :focus-visible) { background-color: var(--white_a12); }
+
+.navbar-list { margin-block-end: auto; }
+
+.navbar-link {
+  font-weight: var(--fw-700);
+  padding-block: 6px;
+}
+
+.contact-link { transition: var(--transition-1); }
+
+.contact-link:is(:hover, :focus-visible) { color: var(--violet-blue-crayola); }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--raisin-black);
+  pointer-events: none;
+  opacity: 0;
+  transition: var(--transition-1);
+}
+
+.overlay.active {
+  pointer-events: all;
+  opacity: 0.8;
+}
+
+
+
+
+
+/*-----------------------------------*\
+  #HERO
+\*-----------------------------------*/
+
+.hero {
+  padding-block-start: calc(var(--section-padding) + 70px);
+  text-align: center;
+}
+
+.hero .container {
+  display: grid;
+  gap: 70px;
+}
+
+.hero-title { color: var(--white); }
+
+.hero-text {
+  font-size: var(--fs-5);
+  color: var(--white);
+  margin-block: 24px 36px;
+}
+
+.btn-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.hero-slider,
+.hero-card { position: relative; }
+
+.hero-card .play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white);
+  color: var(--charcoal);
+  font-size: 2rem;
+  padding: 25px;
+  border-radius: var(--radius-circle);
+  transition: var(--transition-1);
+  animation: pulse 2s ease infinite;
+}
+
+.hero-card .play-btn:is(:hover, :focus-visible) { color: var(--violet-blue-crayola); }
+
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 0 var(--white_a70); }
+  75% { box-shadow: 0 0 0 20px transparent; }
+}
+
+.hero .slider-inner {
+  border-radius: var(--radius-10);
+  overflow: hidden;
+}
+
+.hero .slider-container {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+  transition: var(--transition-2);
+}
+
+.hero .slider-item {
+  min-width: 100%;
+  width: 100%;
+  border-radius: var(--radius-10);
+  overflow: hidden;
+}
+
+.hero .slider-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: var(--white_a70);
+  color: var(--charcoal);
+  font-size: 2rem;
+  padding: 12px;
+  border-radius: var(--radius-circle);
+  transition: var(--transition-1);
+}
+
+.hero .slider-btn:is(:hover, :focus-visible) { background-color: var(--white); }
+
+.hero .slider-btn.prev { left: 20px; }
+
+.hero .slider-btn.next { right: 20px; }
+
+
+
 .padd-section {
   padding-bottom: 80px;
   padding-top: -200px;
