--- a/css/style.css
+++ b/css/style.css
@@ -1323,7 +1323,7 @@ Flexbox is used as a fallback so that browsers which don't support grid will sti
 
 */
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:500);
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 
 :root {
   /* Base font size */
