--- a/css/style.css
+++ b/css/style.css
@@ -301,10 +301,12 @@ span {
 
 #chatbox{
   overflow: hidden;
+  position: sticky;
   background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
 #click{
   display: none;
+  position: fixed;
 }
 label{
   position: absolute;
