--- a/css/style.css
+++ b/css/style.css
@@ -591,7 +591,7 @@ form .textarea textarea:focus::placeholder{
 
 input[type=radio] {
   position: relative;
-  top: 108%;
+  top: 8px;
   left: 50%;
   width: 18px;
   height: 18px;
