--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,6 @@ form .textarea textarea:focus::placeholder{
   top: 0;
   right: 0;
   height: 48px;
-  z-
   transition: all 0.5s ease;
 }
 
@@ -464,7 +463,7 @@ form .textarea textarea:focus::placeholder{
 }
 
 /* Hero Section */
-#header {
+#headerstart {
   width: 100%;
   height: calc(100vh - 40px);
   background-size: 100%;
