--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,6 @@ span {
 }
 
 #chatbox{
-  overflow: hidden;
   position: fixed;
   background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
@@ -309,7 +308,7 @@ span {
 }
 
 label{
-  position: absolute;
+  position: fixed;
   right: 30px;
   bottom: 20px;
   height: 55px;
@@ -324,7 +323,7 @@ label{
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 label i{
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
