--- a/css/style.css
+++ b/css/style.css
@@ -1181,6 +1181,123 @@ body.mobile-nav-active #mobile-nav-toggle i {
   }
 }
 
+/* Courses */
+.courses-item img {
+  position: relative;
+  margin-top: 40px;
+  transition: .5s;
+}
+
+.courses-list-item img {
+  position: relative;
+  transition: .5s;
+}
+
+.courses-item .courses-text,
+.courses-list-item .courses-text {
+  position: absolute;
+  width: 100%;
+  height: calc(100% + 86px);
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  background: linear-gradient(to bottom, rgba(18, 15, 45, 0), #120f2d);
+  transition: .5s;
+  z-index: 1;
+}
+
+.courses-list-item .courses-text {
+  height: 100%;
+}
+
+.courses-item:hover img {
+  margin-top: 0px;
+}
+
+.courses-list-item:hover img {
+  transform: scale(1.2);
+}
+
+.courses-item:hover .courses-text {
+  height: calc(100% + 40px);
+}
+
+.team-carousel .owl-nav,
+.related-carousel .owl-nav {
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  top: calc(50% - 30px);
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.team-carousel .owl-nav .owl-prev,
+.team-carousel .owl-nav .owl-next,
+.related-carousel .owl-nav .owl-prev,
+.related-carousel .owl-nav .owl-next {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  background: #2878EB;
+  font-size: 22px;
+  transition: .5s;
+}
+
+.team-carousel .owl-nav .owl-prev:hover,
+.team-carousel .owl-nav .owl-next:hover,
+.related-carousel .owl-nav .owl-prev:hover,
+.related-carousel .owl-nav .owl-next:hover {
+  background: #F14D5D;
+}
+
+.testimonial-carousel .owl-item img {
+  width: 80px;
+  height: 80px;
+}
+
+.testimonial-carousel .owl-nav {
+  position: absolute;
+  width: 120px;
+  height: 60px;
+  top: 0;
+  right: 0;
+  display: flex;
+  z-index: 1;
+}
+
+.testimonial-carousel .owl-nav .owl-prev,
+.testimonial-carousel .owl-nav .owl-next {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  background: #2878EB;
+  font-size: 22px;
+  transition: .5s;
+}
+
+.testimonial-carousel .owl-nav .owl-prev,
+.testimonial-carousel .owl-nav .owl-next:hover {
+  background: #F14D5D;
+}
+
+.testimonial-carousel .owl-nav .owl-prev:hover {
+  background: #2878EB;
+}
+
 /* Team Section */
 #team .team-block {
   box-shadow: 0 0 35px rgba(50, 13, 13, 0.1);
