--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -12,7 +12,7 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
+    background: linear-gradient(to bottom, #6d0f0f 0%, #3F3F3F 40%, #014858b6 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
     background-blend-mode: multiply;
 }
 
@@ -20,12 +20,12 @@ body {
     position: relative;
     width: 370px;
     height: auto;
-    background: #1b1b1b;
+    background: #03266dc7;
     padding: 40px 35px 60px;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid rgb(87, 63, 1);
     border-radius: 5px;
-    box-shadow: inset 0 0 1px #272727;
+    box-shadow: inset 0 0 1px #02406cb0;
 }
 
 .text {
@@ -66,12 +66,12 @@ form button {
     padding: 0 15px;
     border-radius: 0 5px 5px 0;
     border: 1px solid #444;
-    caret-color: #339933;
+    caret-color: #042777cb;
     background: linear-gradient(#333, #222);
 }
 
 input:focus {
-    color: #339933;
+    color: #085c75c7;
     box-shadow: 0 0 5px rgba(0, 255, 0, .2),
                 inset 0 0 5px rgba(0, 255, 0, .1);
     background: linear-gradient(#333933, #222922);
@@ -80,14 +80,14 @@ input:focus {
 
 @keyframes glow {
     0% {
-        border-color: #339933;
+        border-color: #034865ab;
         box-shadow: 0 0 5px rgba(0, 255, 0, .2),
                     inset 0 0 5px rgba(0, 0, 0, .1);
     }
     100% {
-        border-color: #6f6;
-        box-shadow: 0 0 20px rgba(0, 255, 0, .6),
-                    inset 0 0 10px rgba(0, 255, 0, .4);
+        border-color: rgba(92, 110, 5, 0.605);
+        box-shadow: 0 0 20px rgba(0, 123, 255, 0.6),
+                    inset 0 0 10px rgba(6, 95, 184, 0.655);
     }
 }
 
@@ -100,12 +100,12 @@ button {
 }
 
 button:hover {
-    color: #339933;
-    border: 1px solid #339933;
+    color: #072a68c0;
+    border: 1px solid #052c86b3;
     box-shadow: 0 0 5px rgba(0, 255, 0, .3),
                 0 0 10px rgba(0, 255, 0, .2),
                 0 0 15px rgba(0, 255, 0, .1),
-                0 2px 0 black;
+                0 2px 0 rgba(115, 3, 3, 0.764);
 }
 
 .link {
@@ -114,7 +114,7 @@ button:hover {
 }
 
 .link a {
-    color: #339933;
+    color: #727006;
     text-decoration: none;
 }
 
