--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ span {
 }
 
 #chatbox{
+  overflow: hidden;
   position: fixed;
   background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
@@ -308,7 +309,7 @@ span {
 }
 
 label{
-  position: relative;
+  position: absolute;
   right: 30px;
   bottom: 45px;
   height: 55px;
@@ -323,7 +324,7 @@ label{
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 label i{
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
