--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Rubik", sans-serif;
+  background-color: #1b0b48b0;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
