--- a/css/style.css
+++ b/css/style.css
@@ -1282,7 +1282,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 /* end get started section */
 
 
-/* Screenshots Section */
+/* Screenshots Section
 .owl-dot.active > span {
   height: 10px !important;
   width: 10px !important;
@@ -1313,7 +1313,7 @@ body.mobile-nav-active #mobile-nav-toggle i {
 .owl-theme .owl-dots .owl-dot span {
   background: #ddd;
 }
-
+ */
 
 
 /*-- end screenshot --*/
